Fix reseller guide display on Firefox

--- a/src/index.scss
+++ b/src/index.scss
@@ -197,6 +197,10 @@ table.checkered {
         &:first-child {
             border-right: 1px solid black;
         }
+
+        a {
+            display: block;
+        }
     }
 }
 
